syntax = "proto3";

package com.v2ray.core.proxy.vmess.inbound;
option go_package = "inbound";

import "v2ray.com/core/common/protocol/user.proto";

message DetourConfig {
  string to = 1;
}

message DefaultConfig {
  uint32 alter_id = 1;
  uint32 level = 2;
}

message Config {
  repeated com.v2ray.core.common.protocol.User user = 1;
  DefaultConfig default = 2;
  DetourConfig detour = 3;
}